Minor fix for overlapping text in WAYF

--- a/css/responsive/screen.css
+++ b/css/responsive/screen.css
@@ -758,7 +758,7 @@ div.right input{
         left: 10px;
         color: red;
         text-align: center;
-        top: 74px;
+        top: 86px;
         width: 112px;
         position: absolute;
         display: block;
